Bug #17499 Alter table of ndb partitioned tables causes mysqld to core - moved used_partitions initialization