sql/ha_ndbcluster.cc
@@ -3381,8 +3381,13 @@ int ha_ndbcluster::extra(enum ha_extra_function operation)
     DBUG_PRINT("info", ("HA_EXTRA_RESET"));
     DBUG_PRINT("info", ("Clearing condition stack"));
     cond_clear();
+    /*
+     * Regular partition pruning will set the bitmap appropriately.
+     * Some queries like ALTER TABLE doesn't use partition pruning and
+     * thus the 'used_partitions' bitmap needs to be initialized
+     */
     if (m_part_info)
-      bitmap_clear_all(&m_part_info->used_partitions);
+      bitmap_set_all(&m_part_info->used_partitions);
     break;
   case HA_EXTRA_IGNORE_DUP_KEY:       /* Dup keys don't rollback everything*/
     DBUG_PRINT("info", ("HA_EXTRA_IGNORE_DUP_KEY"));
